--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1073,3 +1073,60 @@ classes*/
 /* from here onward changes is made by Akib. 
 Meet the trainer*/
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* from here onward changes is made by Shouvik. 
+profile Page*/
+/* Shouvik
+profile Page*/
+
+.profile-icon {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  cursor: pointer;
+  border: 2px solid #ccc;
+}
+
+.profile-menu {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-menu {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 50px;
+  background: #fff;
+  padding: 12px;
+  width: 170px;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+}
+
+.dropdown-menu a {
+  display: block;
+  padding: 8px;
+  color: #333;
+  text-decoration: none;
+}
+
+.dropdown-menu a:hover {
+  background: #f0f0f0;
+}
+
